--- a/index.html
+++ b/index.html
@@ -4,11 +4,30 @@
 <head>
 	<title>Ejemplo Git</title>
 	<meta name="autor" vale="Luz areli moreno" >
-	<meta name="Description" content="aprender git"/>
-	<meta name="keywords" content="education, git"/>
+	<meta name="Description" content="Taller #1 html"/>
+	<meta name="keywords" content="education, git, ejercicio, html"/>
 	<meta charset="utf-8"/>
 </head>
 <body>
+<header>
+<!--encabezado navegador-->
+<nav>
+<ul>
+	<li>Services</li>
+	<li>Team</li>
+	<li>Technologies</li>
+	<li>Products</li>
+	<li>Forge</li>
+	<li>Contact</li>	
+</ul>
+<h2>We are</h2>
+<h1>Cloud Application Experts</h1>
+<h3>We build and scale Cloud-Enabled & Mobile Applications</h3>
+<button type="button"> Learn More</button>
+</nav>
+	
+
+</header>
 
 </body>
 </html>
