--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<! DOCTYPE HTML>
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Ejemplo Git</title>
@@ -20,14 +19,15 @@
 	<li>Forge</li>
 	<li>Contact</li>	
 </ul>
+</nav>
 <h2>We are</h2>
 <h1>Cloud Application Experts</h1>
 <h3>We build and scale Cloud-Enabled & Mobile Applications</h3>
 <button type="button"> Learn More</button>
-</nav>
-	
-
 </header>
+<section>
+	<ar
+</section>
 
 </body>
 </html>
