nombres y cargos trabajadores

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ejemplo Git</title>
+	<title>Taller 1</title>
 	<meta name="autor" vale="Luz areli moreno" >
 	<meta name="Description" content="Taller #1 html"/>
 	<meta name="keywords" content="education, git, ejercicio, html"/>
@@ -15,18 +15,67 @@
 	<li>Services</li>
 	<li>Team</li>
 	<li>Technologies</li>
+	<img src="imagenes/logo.jpg" alt="Logo de la empresa" ><a href="#"></a>
 	<li>Products</li>
 	<li>Forge</li>
 	<li>Contact</li>	
 </ul>
 </nav>
-<h2>We are</h2>
-<h1>Cloud Application Experts</h1>
-<h3>We build and scale Cloud-Enabled & Mobile Applications</h3>
+<h1>We are World tech Markers</h1>
+<h2>Cloud Application Experts</h2>
+<p>We build and scale Cloud-Enabled & Mobile Applications</p>
 <button type="button"> Learn More</button>
 </header>
+<!--Primera seccion-->
 <section>
-	<ar
+  <p> this is what</p>
+  <h2>We can do for you</h2>
+	<article>
+		<h3>Mobile Development</h3>
+		<p>We design, develop and publish fully intective and visually appealing !OS and Android applications integred with specialized and optimized backends systems providing smooth performance.
+		We have also experience building libraries and gramewoks for !OS SDK,Android and RubyMotion</p>
+	</article>
+</section>
+<!--encabezado navegador-->
+<section>
+	<article>
+		<h2>Peoble who makes possible the awesomeness</h2>
+		<p>We are a team of 6 Developers and 2 Managers with more than 35 years of experience.</p>
+	</article>
+	<article>
+		<ul>
+			<li>
+			<h2>Johan Hernandez</h2>
+			<p>Managing Director & Co-Founder</p>
+			</li>
+			<li>
+			<h2>Roberto Miranda</h2>
+			<p>Chief opetating officer & Co-Founder</p>
+			</li>
+			<li>
+			<h2>Robin Hernandez</h2>
+			<p>Member of Techical Staff</p>
+			</li>
+			<li>
+			<h2>Karen Casadiego</h2>
+			<p>Accounting</p>
+			</li>
+			<li>
+			<h2>Guillermo Iguaran</h2>
+			<p>VP of Engineering & Co-Founder</p>
+			</li>
+			<li>
+			<h2>Lacides Charris</h2>
+			<p>Member of Technical Staff</p>
+			</li>
+			<li>
+			<h2>Paola Garcia</h2>
+			<p>RRHH</p>
+			</li>
+
+
+		</ul>
+	</article>
 </section>
 
 </body>
