lenguajes de programacion y nuve

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		We have also experience building libraries and gramewoks for !OS SDK,Android and RubyMotion</p>
 	</article>
 </section>
-<!--encabezado navegador-->
+<!--Cargos empresa-->
 <section>
 	<article>
 		<h2>Peoble who makes possible the awesomeness</h2>
@@ -45,37 +45,60 @@
 	<article>
 		<ul>
 			<li>
-			<h2>Johan Hernandez</h2>
-			<p>Managing Director & Co-Founder</p>
+			<h3>Johan Hernandez</h3>
+			Managing Director & Co-Founder
 			</li>
 			<li>
-			<h2>Roberto Miranda</h2>
+			<h3>Roberto Miranda</h3>
 			<p>Chief opetating officer & Co-Founder</p>
 			</li>
 			<li>
-			<h2>Robin Hernandez</h2>
+			<h3>Robin Hernandez</h3>
 			<p>Member of Techical Staff</p>
 			</li>
 			<li>
-			<h2>Karen Casadiego</h2>
+			<h3>Karen Casadiego</h3>
 			<p>Accounting</p>
 			</li>
 			<li>
-			<h2>Guillermo Iguaran</h2>
+			<h3>Guillermo Iguaran</h3>
 			<p>VP of Engineering & Co-Founder</p>
 			</li>
 			<li>
-			<h2>Lacides Charris</h2>
+			<h3>Lacides Charris</h3>
 			<p>Member of Technical Staff</p>
 			</li>
 			<li>
-			<h2>Paola Garcia</h2>
+			<h3>Paola Garcia</h3>
 			<p>RRHH</p>
 			</li>
-
-
 		</ul>
 	</article>
+</section>
+<!--Tecnologias Utilizadas-->
+<section>
+	<p>We are not "one size fits all" like company.<br>
+	We Carefull pick rigth technologies for you needs.</p>
+	<ul>
+		<li><img src="imagenes/nodejs.png" alt="logo1"></li>
+		<li><img src="imagenes/nodejs.png" alt="logo2"></li>
+		<li><img src="imagenes/nodejs.png" alt="logo3"></li>
+		<li><img src="imagenes/nodejs.png" alt="logo3"></li>
+	</ul>
+</section>
+<section>
+	<article>
+		<h3>Nuvado</h3>
+		<p>Compile and distribute !OS applications in the cloud.
+		Nuvado us a platform to compile and distribute !OS applications in Cloud allowing user to use the operating system and code editor of their preference.
+		Build your apps using dedicated servers and distibute through package files or over the air with TestFlight.
+		<a href="#">Try Nuvado</a></p>
+	</article>
+</section>
+<!--Comunidades asociadas-->
+<section>
+
+
 </section>
 
 </body>
