--- a/index.html
+++ b/index.html
@@ -45,32 +45,32 @@
 	<article>
 		<ul>
 			<li>
-			<h3>Johan Hernandez</h3>
+			Johan Hernandez<br>
 			Managing Director & Co-Founder
 			</li>
 			<li>
-			<h3>Roberto Miranda</h3>
-			<p>Chief opetating officer & Co-Founder</p>
+			Roberto Miranda<br>
+			Chief opetating officer & Co-Founder
 			</li>
 			<li>
-			<h3>Robin Hernandez</h3>
-			<p>Member of Techical Staff</p>
+			Robin Hernandez<br>
+			Member of Techical Staff
 			</li>
 			<li>
-			<h3>Karen Casadiego</h3>
-			<p>Accounting</p>
+			Karen Casadiego<br>
+			Accounting
 			</li>
 			<li>
-			<h3>Guillermo Iguaran</h3>
-			<p>VP of Engineering & Co-Founder</p>
+			Guillermo Iguaran<br>
+			VP of Engineering & Co-Founder
 			</li>
 			<li>
-			<h3>Lacides Charris</h3>
-			<p>Member of Technical Staff</p>
+			Lacides Charris<br>
+			Member of Technical Staff
 			</li>
 			<li>
-			<h3>Paola Garcia</h3>
-			<p>RRHH</p>
+			Paola Garcia<br>
+			RRHH
 			</li>
 		</ul>
 	</article>
@@ -89,16 +89,82 @@
 <section>
 	<article>
 		<h3>Nuvado</h3>
-		<p>Compile and distribute !OS applications in the cloud.
-		Nuvado us a platform to compile and distribute !OS applications in Cloud allowing user to use the operating system and code editor of their preference.
+		<p>Compile and distribute IOS applications in the cloud.
+		Nuvado us a platform to compile and distribute IOS applications in Cloud allowing user to use the operating system and code editor of their preference.
 		Build your apps using dedicated servers and distibute through package files or over the air with TestFlight.
 		<a href="#">Try Nuvado</a></p>
 	</article>
 </section>
 <!--Comunidades asociadas-->
 <section>
+<article>
+<p> Open-Source is part of our DNA, our Forge is full of community contributions and in-house made utilities:</p>
 
+	<li><h3>Rails:rails contributor</h3>
+	Ruby on Rails
+	</li>
+	<li><h3>firesbaseco: mongoose-Attachments</h3>
+	<img src="imagenes/logo.jpg" alt="Logo de la empresa" >
+	Attachments Pluguin for Mongoose.js with Support for S3 and ImageMagick Styles</li>
+	<li><h3>JRuby: Activerecord jdbc adapter</h3>
+	<img src="imagenes/logo.jpg" alt="Logo de la empresa" >
+	Contributor <br> ActuveRecord adapter for JDBC and JRuby</li>
+	<li><h3>Firebasaseco: Fireuipagedscrollview</h3>
+	<img src="imagenes/logo.jpg" alt="Logo de la empresa" >
+	Handle orientaton changes ang integrate with UIPageControl out of the box.</li>
+	<li><h3>Rubinius:Rubinius contributor</h3><img src="imagenes/logo.jpg" alt="Logo de la empresa" ></li>
+	<li><h3>Fauna: faun's IOS skd</h3>
+	<img src="imagenes/logo.jpg" alt="Logo de la empresa" >
+	RFauna SDK gor IOS +Examples</li>
+	<li><h3>Firebaseco: light</h3>
+	<img src="imagenes/logo.jpg" alt="Logo de la empresa" >
+	Minimal HTTP server for Rack applications</li>
+	<li><h3>Firebaseco: Nancy</h3>
+	<img src="imagenes/logo.jpg" alt="Logo de la empresa" >
+	Minimal Ruby microframework web development inspires in Sinatra and Cuba</li>
+	<li><h3>Firebaseco: Express winston</h3>
+	<img src="imagenes/logo.jpg" alt="Logo de la empresa" >
+	Express Wiston middleware for flatiron/wiston</li>
+	<li><h3>Firebaseco: Multilang-Hstore</h3>
+	<img src="imagenes/logo.jpg" alt="Logo de la empresa" >
+	Multilang is a small library for translating database values for Rails 3 and Postgresql</li>
+	<li><h3>JRuby: JRuby-Rack </h3>
+	<img src="imagenes/logo.jpg" alt="Logo de la empresa" >
+	Contributor Rack for JRuby and Java appservers</li>
+	<li><h3>JRuby: Warble </h3>
+	<img src="imagenes/logo.jpg" alt="Logo de la empresa" >
+	Contributor Warble chipily constucts. War files of your Ruby applications</li>
+	<li><h3>Firebaseco: Duv</h3>
+	<img src="imagenes/logo.jpg" alt="Logo de la empresa" >
+	Fibers-base, Object-Oriented non-Blocking Platform Layer for D.(Based on node.js libuv library)</li>
+	<li><h3>Fauna: fauna's Ruby Client</h3>
+	<img src="imagenes/logo.jpg" alt="Logo de la empresa" >
+	Contributor Fauna's ruby client</li>
+	<li><h3>Firebaseco: Orch.js</h3>
+	<img src="imagenes/logo.jpg" alt="Logo de la empresa" >
+	Orch.js:Distributed RCp orchestration</li>
+	<li><h3>Firebaseco: Vcap.js</h3>
+	Orch.js:Distributed RCp orchestration</li>
+			
+</ul>
+</article>
+</section>
+<section>
+	<h2>Contact Us</h2>
+	<span>We would love to hear from you</span>
+	<form>
+		firebase
+				<p>Your name*
+				<input type="text"></p>
+				<p>Your email*
+				<input type="text"></p>
+				<p>Your Comments*
+				<textarea></textarea></p>
+				<button type="botton">Submit</button>
 
+			<p>(+57) 312-615-614<br>
+			Cll 100 No 49D-134 pl20 ap 1c barranquilla, colombia</p>
+	</form>
 </section>
 
 </body>
